# pyiwy

./: README.md  pyproject.toml
pyiwy/: __init__.py  exceptions_data.py  handler.py
tests/: test_exceptions.py
