[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyiwy"
version = "0.1.1"
description = "A Python package that replaces boring exceptions with hilarious messages."
readme = "README.md"
authors = [
    { name = "Shreehar K E", email = "shreehar.elancheran@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = []

requires-python = ">=3.0"

keywords = ["exceptions", "debugging", "humor", "errors", "traceback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Debuggers",
]

[project.urls]
Repository = "https://github.com/Shreehar-KE/pyiwy"
Issues = "https://github.com/Shreehar-KE/pyiwy/issues"